fix spacing

--- a/components/quiz.css
+++ b/components/quiz.css
@@ -17,7 +17,6 @@
   font-weight: 700;
   font-size: 1rem; /* 16px / 16 = 1rem */
   line-height: 1.16875rem; /* 18.7px / 16 = 1.16875rem */
-  margin-left: 4.6875em; /* 75px / 16 = 4.6875em */
   width: 100%;
 }
 
